sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: Int does not take parameters
				copie(i-k-1, i-k)
                                     ^